--- a/app-documentation/minisite/content/swagger-ui.adoc
+++ b/app-documentation/minisite/content/swagger-ui.adoc
@@ -9,12 +9,18 @@
 <script>
 if (!document.querySelector('head > link#swaggerUi')) {
     const link = document.createElement('link');
+    link.id = 'swaggerUi';
     link.rel = 'stylesheet';
     link.href = 'https://cdnjs.cloudflare.com/ajax/libs/swagger-ui/5.12.0/swagger-ui.min.css';
     link.integrity = 'sha512-pV+ep5Xjvc5jwqjAGERsdA00vVaP7eaKd2dYDSEe3sqe3v4ohjue4O51AnLvQGOU2hrlTo7tvLpHXLZfQa9Ubg==';
     link.crossOrigin = 'anonymous';
     link.referrerPolicy = 'no-referrer';
     document.head.appendChild(link);
+
+    // reset code background too since minisite theme override breaks swagger-ui theme
+    const style = document.createElement('style');
+    style.innerHTML = 'code {background: inherit;}';
+    document.head.appendChild(style);
 }
 SwaggerUIBundle({
     url: 'openapi.json',
