--- a/app-documentation/minisite/content/getting-started.adoc
+++ b/app-documentation/minisite/content/getting-started.adoc
@@ -13,4 +13,5 @@ This project aims to test automatically in a Kubernetes cluster and in a monitor
 Learn more:
 
 * xref:configuration.adoc[Configuration]
+* xref:api.adoc[API]
 * xref:deployment.adoc[Deployment]
