--- a/app-documentation/minisite/content/configuration.adoc
+++ b/app-documentation/minisite/content/configuration.adoc
@@ -6,7 +6,7 @@
 :minisite-keywords: configuration
 :minisite-breadcrumb: Home[/] > Configuration
 :minisite-nav-prev-label: Getting Started
-:minisite-nav-next-label: JSON-RPC
+:minisite-nav-next-label: API
 
 [abstract]
 This page lists the configuration of the application.
