--- a/README.adoc
+++ b/README.adoc
@@ -14,6 +14,15 @@ Pre-requisite: Maven >= 3.8 and Java >= 17.
 mvn clean install
 ----
 
+== Documentation
+
+To run the documentation website locally:
+
+[source, bash]
+----
+mvn process-classes -pl app-documentation yupiik-tools:serve-minisite -e
+----
+
 == Test
 
 === Products
